--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -90,6 +90,14 @@
                     android:hint=" Password" />
             </com.google.android.material.textfield.TextInputLayout>
 
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15dp"
+                android:text="I agree Terms and Coditions"
+                android:layout_margin="10dp"/>
+
             <Button
                 android:id="@+id/button"
                 android:layout_width="match_parent"
@@ -107,6 +115,7 @@
         android:layout_gravity="center"
         android:textSize="15dp"
         android:text="Already a user ?" />
+
         </LinearLayout>
 
     </ScrollView>
